[gd_scene load_steps=4 format=3 uid="uid://dngmdpys5vfpb"]

[ext_resource type="Script" path="res://start_area.gd" id="1_7bw7y"]
[ext_resource type="Texture2D" uid="uid://bpb4etpgfldl4" path="res://resources/button_back.png" id="2_6tjmm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ue5t"]
size = Vector2(300, 40)

[node name="Start_Button" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("1_7bw7y")

[node name="ButtonBack" type="Sprite2D" parent="Area2D"]
position = Vector2(150, 20)
texture = ExtResource("2_6tjmm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(150, 20)
shape = SubResource("RectangleShape2D_0ue5t")

[node name="Label" type="Label" parent="."]
offset_left = 19.0
offset_top = 8.0
offset_right = 59.0
offset_bottom = 31.0
text = "Enter Spaceship Control Interface"

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
